# superinstance-cli

./: pyproject.toml
src/superinstance_cli/: __init__.py
tests/: test_cli.py
