[project]
name = "superinstance-cli"
version = "0.1.0"
description = "Unified CLI for the SuperInstance ecosystem"
requires-python = ">=3.10"
dependencies = ["click>=8.0"]

[project.scripts]
superinstance = "superinstance_cli:cli"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
